# otop

./: README.md  bar.go  config.go  correlate.go  db.go  detail.go  ecosystem.config.cjs  format.go  go.mod  go.sum  main.go  process.go  pyproject.toml  serve.go  tui.go  types.go  view.go
.github/workflows/: publish.yml
plugin/: index.ts  package.json
src/otop/: main.py
